tests-system/rbt-valid-base-names/output
Bar.T kitten {
    ^ rbt-valid-base-names/foo.trlc:8: error: unknown symbol T
Processed 2 models and 1 requirement file and found 1 error
